# csi

./: Cargo.toml  README.org
assets/: README.org
samples/: LICENSE  csi_config.toml  test.txt
src/: csi_parser.rs  installer.rs  lib.rs  main.rs  utils.rs
src/csi_app/: mod.rs
src/csi_lib/: core.rs  gui.rs  mod.rs  parser.rs  settings.rs  utils.rs
src/csi_lib/core/: installer_action.rs  installer_page.rs  mod.rs
src/csi_lib/gui/: mod.rs  page.rs  page_frame.rs
