[package]
name = "csi"
version = "0.0.1"
edition = "2024"

[lib]
# crate-type = [
#     "rlib",        # Rust static library
#     "dylib",       # Rust dynamic library
#     "staticlib",   # C static library
#     "cdylib"       # C dynamic library
# ]

[dependencies]
toml = "1.0.1"
serde = {version = "1.0.0", features = ["derive"]}
eframe = "0.33.3"
shellexpand = "3.1.2"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }

[lints.rust]
# unused = "allow"
# unused_variables = "allow"
# unused_imports = "allow"
# dead_code = "allow"
# unused_mut = "allow"
